# rust-web-project

./: .env  .gitignore  Cargo.toml  README.md  dockerfile
public/: index.html
public/_app/: version.json
public/_app/immutable/assets/: 2.dbc833d4.css
public/_app/immutable/chunks/: index.3bf27b29.js
public/_app/immutable/entry/: app.3d7e9198.js  start.eba63c39.js
public/_app/immutable/nodes/: 1.cbf3980d.js  2.11861910.js  3.980db252.js  5.f671b96b.js
src/: authorise.rs  database_route.rs  db.rs  main.rs  main_route.rs  shutdown.rs  static_files.rs  test_route.rs  tracing.rs  validation.rs
src/api/: api_response.rs  authorise.rs  check_jwt.rs  jwt_claims.rs  logout.rs  mix_type_example.rs  mixed_type.rs  mod.rs  pokemon_route.rs  register_user.rs  sentance.rs  sentence.rs  test_route.rs  test_route2.rs  word.rs  word_list.rs
src/sql/: createUser.sql  matchUser.sql  pokemon.sql  pokemonByType.sql
svelte-front/: package-lock.json  package.json  svelte.config.js  tsconfig.json
svelte-front/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  footer.svelte  header.svelte  navigate.svelte  store.ts
svelte-front/src/routes/about/: +page.svelte
svelte-front/src/routes/calc/: +page.svelte
svelte-front/src/routes/koi/: +page.svelte
svelte-front/src/routes/language/: +page.svelte
svelte-front/src/routes/language/learn-[lang]/: +page.svelte  +page.ts
svelte-front/src/routes/login/: +page.svelte
svelte-front/src/routes/pokemon/: +page.svelte
svelte-front/src/routes/pokemon/[id]/: +page.svelte  +page.ts
svelte-front/src/routes/profile/[id]/: +page.svelte  +page.ts
svelte-front/src/routes/register/: +page.svelte
svelte-front/src/routes/reset_password/: +page.svelte
svelte-front/src/routes/set/: +page.svelte  +page.ts  backupCode.txt  card.svelte  functions.ts
svelte-front/src/routes/set/card/: +page.svelte
svelte-front/src/routes/test/: +page.svelte  +page.ts
