[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["headers", "macros", "tracing"] }
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["macros", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
