[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.2", features = ["http2", "macros", "tracing"] }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
chrono = "0.4.31"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["chrono", "json", "macros", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
