[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["http2", "macros", "tracing"] }
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
chrono = "0.4.33"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["chrono", "json", "macros", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
